scrollbar enabled rework + soundtrack fixer up

--- a/config/client/scrollbars/hide.css
+++ b/config/client/scrollbars/hide.css
@@ -1,4 +1,6 @@
 /* HIDE SCROLLBARS */
 :root {
   --option-display-scrollbars: 0px;
+  --option-navbar-position: absolute;
+  --option-navbar-margin: 32px;
 }
