--- a/config/client/scrollbars/show.css
+++ b/config/client/scrollbars/show.css
@@ -1,4 +1,6 @@
 /* SHOW SCROLLBARS */
 :root {
   --option-display-scrollbars: 16px;
+  --option-navbar-position: relative;
+  --option-navbar-margin: 0px;
 }
