--- a/css/dialog/artwork.css
+++ b/css/dialog/artwork.css
@@ -5,7 +5,7 @@
 }
 
 /* ARTWORK DIALOG */
-.ModalDialogPopup .PopupFullWindow>.ModalPosition>.ModalPosition_Content:has(.bAmL1RoRQJ72mvxRb_Mi_) {
+.ModalDialogPopup .PopupFullWindow>.ModalPosition:has(.bAmL1RoRQJ72mvxRb_Mi_), .ModalDialogPopup .PopupFullWindow>.ModalPosition>.ModalPosition_Content:has(.bAmL1RoRQJ72mvxRb_Mi_) {
   height: unset !important;
   margin: 0px !important;
 }
@@ -29,6 +29,7 @@
   margin: 0px !important;
   -webkit-mask-image: none !important;
   overflow-x: hidden !important;
+  overflow-y: auto !important; // SCROLL
   gap: 16px !important;
 }
 
