--- a/css/friends/friends.css
+++ b/css/friends/friends.css
@@ -186,7 +186,7 @@ body:not(.WindowFocus) .titleBarContainer .ContextMenuButton {
 /* FRIENDS */
 .FriendsListContent {
   margin-top: 0px !important;
-  overflow-y: overlay !important;
+  overflow-y: auto !important; // SCROLL
   height: fit-content !important;
 }
 
