--- a/css/variables/options.css
+++ b/css/variables/options.css
@@ -17,6 +17,8 @@
   --reveal-background-active: var(--option-reveal-background-active, rgba(var(--color-negative), 0.2));
 
   --display-scrollbars: var(--option-display-scrollbars, 0px);
+  --navbar-position: var(--option-navbar-position, absolute);
+  --navbar-margin: var(--option-navbar-margin, 32px);
 
   --display-tooltips: var(--option-display-tooltips, block);
 
